# Ferris-8

./: .gitignore  Cargo.toml  README.md  launch.sh  test.sh
src/: audio.rs  cpu.rs  display.rs  input.rs  lib.rs  memory.rs
web/: index.html  main.js  style.css  sw.js
web/roms/: index.json
